revops-lab/main/default/objects/Sales_Subscription__c/Sales_Subscription__c.object-meta.xml
<CustomObject>
    <description>Recurring entitlement created by OrderConversionService for each annual line. Master-detail to Account, so access follows the account.</description>
    <label>Sales Subscription</label>
    <nameField>
        <displayFormat>SSUB-{000000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>