revops-lab/main/default/objects/Sales_Subscription__c/fields/Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Value__c</fullName>
    <label>Annual Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>