revops-lab/main/default/objects/Sales_Subscription__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Sales Subscriptions</relationshipLabel>
    <relationshipName>Sales_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>