revops-lab/main/default/objects/Sales_Subscription__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales Subscriptions</relationshipLabel>
    <relationshipName>Sales_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>