revops-lab/main/default/objects/Sales_Subscription__c/fields/Quote_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Quote_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Configuration</label>
    <referenceTo>Quote_Configuration__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>